fix of menu translation for landscape mode on mobile

--- a/src/app/components/menu/menu.scss
+++ b/src/app/components/menu/menu.scss
@@ -13,7 +13,7 @@
 	justify-content: space-between;
 	background: var(--menu-color);
 	top: calc(var(--header-height) - 1px);
-	translate: 0 -45vh;
+	translate: 0 -55vh;
 	left: 0;
 	width: 100%;
 	transition: translate 225ms;
